added hadolint command to config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@ jobs:
             . venv/bin/activate
 
             make install
+            sudo wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 && \
+            sudo chmod +x /bin/hadolint
 
       - run : 
           name : running lint operation
