--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,7 @@ jobs:
           command: |
             sudo pip3 install awscli
             sudo apt-get install gettext-base
+
       - run:
           name : Ensure network infra exsists
           command : |
@@ -127,33 +128,6 @@ jobs:
           #--capabilities CAPABILITY_NAMED_IAM
 
       - run:
-            name: Install aws-iam-authenticator
-            command: |
-              curl -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/aws-iam-authenticator
-              sudo chmod +x ./aws-iam-authenticator
-              sudo mv ./aws-iam-authenticator /usr/local/bin/aws-iam-authenticator
-
-      - run:
-            name: Install kubectl
-            command: |
-              curl -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.8/2019-08-14/bin/linux/amd64/kubectl
-              sudo chmod +x ./kubectl
-              sudo mv ./kubectl /usr/local/bin/kubectl
-
-      - run:
-            name: Connect to cluster
-            command: |
-              aws eks list-clusters > ~/cluster_name.txt
-              export CLUSTER_NAME=$(cat ~/cluster_name.txt)
-              aws eks --region us-east-1 update-kubeconfig --name Udacitycapstoneproject-Cluster
-
-      - run:
-          name: deploy on kuberbetes
-          command: |
-            kubectl apply -f deployment.yml
-            kubectl get pod
-
-      - run:
           name: loadbalancer installation
           command: |
             aws cloudformation \
@@ -179,6 +153,43 @@ jobs:
           command: |
             aws cloudformation wait stack-create-complete \
             --stack-name "loadbalacer-${CIRCLE_WORKFLOW_ID:0:7}"
+
+  deploy_infra:
+    docker:
+        - image: circleci/python:3.7
+    steps:
+      - checkout
+      - run:
+          name: Install awscli and gettext-base
+          command: |
+            sudo pip3 install awscli
+            sudo apt-get install gettext-base
+
+      - run:
+          name: Install aws-iam-authenticator
+          command: |
+            curl -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/aws-iam-authenticator
+            sudo chmod +x ./aws-iam-authenticator
+            sudo mv ./aws-iam-authenticator /usr/local/bin/aws-iam-authenticator
+
+      - run:
+            name: Install kubectl
+            command: |
+              curl -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.8/2019-08-14/bin/linux/amd64/kubectl
+              sudo chmod +x ./kubectl
+              sudo mv ./kubectl /usr/local/bin/kubectl
+
+      - run:
+            name: Connect to cluster
+            command: |
+              aws eks list-clusters > ~/cluster_name.txt
+              export CLUSTER_NAME=$(cat ~/cluster_name.txt)
+              aws eks --region us-east-1 update-kubeconfig --name Udacitycapstoneproject-Cluster
+      - run:
+          name: deploy on kuberbetes
+          command: |
+            kubectl apply -f deployment.yml
+            kubectl get pod
 
       - run :
           name: deploy a loadbalancer Service
@@ -242,7 +253,7 @@ workflows:
       - upload_docker:
           requires:
             - build
-      - create_infrastructure:
+      - deploy_infra:
           requires:
             - upload_docker
      
