--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,8 @@ jobs:
             export DOCKER_IMAGE_NAME=capstone-project
             echo "Docker ID and Image: ${DOCKER_IMAGE_NAME}" 
             docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-            docker tag ${DOCKER_IMAGE_NAME} ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:${CIRCLE_WORKFLOW_ID}
-            docker push ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:${CIRCLE_WORKFLOW_ID}
+            docker tag ${DOCKER_IMAGE_NAME} ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:latest
+            docker push ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:latest
           
 
   create_infrastructure:
