added image name in deployment.yaml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,7 +188,8 @@ jobs:
       - run:
           name: deploy on kuberbetes
           command: |
-            kubectl apply -f deployment.yml
+            kubectl delete pods --all
+            kubectl apply -f deployment.yaml
             kubectl get pod
 
       - run :
