--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,7 +168,7 @@ jobs:
       - run:
           name: Install aws-iam-authenticator
           command: |
-            #curl -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/aws-iam-authenticator
+            
             curl -Lo aws-iam-authenticator https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.5.9/aws-iam-authenticator_0.5.9_linux_amd64
 
             sudo chmod +x ./aws-iam-authenticator
@@ -177,9 +177,9 @@ jobs:
       - run:
             name: Install kubectl
             command: |
-              curl -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.8/2019-08-14/bin/linux/amd64/kubectl
+              curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
               sudo chmod +x ./kubectl
-              sudo mv ./kubectl /usr/local/bin/kubectl
+              sudo mv ./kubectl /usr/local/bin
 
       - run:
             name: Connect to cluster
