--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,6 +192,8 @@ jobs:
           command: |
             kubectl apply -f deployment.yaml
             kubectl get pod
+            kubectl get service
+            kubectl get deployments
 
       - run :
           name: deploy a loadbalancer Service
