--- a/cloudformation/network.yml
+++ b/cloudformation/network.yml
@@ -75,6 +75,8 @@ Resources:
             Tags: 
                 - Key: Name 
                   Value: !Sub ${ProjectName} Public Subnet (AZ1)
+                - Key: kubernetes.io/role/elb
+                  Value: 1
 
     PublicSubnet2: 
         Type: AWS::EC2::Subnet
@@ -86,6 +88,8 @@ Resources:
             Tags: 
                 - Key: Name 
                   Value: !Sub ${ProjectName} Public Subnet (AZ2)
+                - Key: kubernetes.io/role/elb
+                  Value: 1
 
     PrivateSubnet1: 
         Type: AWS::EC2::Subnet
