--- a/service.yml
+++ b/service.yml
@@ -2,11 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: capstone-project
+  name: capstone-project-service
 spec:
   selector:
     app: capstone-project
   ports:
     - protocol: TCP
-      port: 3000
+      port: 80
       targetPort: 3000
+  type: LoadBalancer
