verifying libs in circleci docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
+            uname
             python3 -m venv venv
             . venv/bin/activate
 
