--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,8 @@ jobs:
           name: install dependencies
           command: |
             uname
-            apt update
-            apt install -y gettext
+            sudo apt update
+            sudo apt install -y gettext
             envsubst -V
             python3 -m venv venv
             . venv/bin/activate
