--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
       - run :
           name: create appilcation Dockerfile
           command: |
+            touch oldDockerfile
             cat Dockerfile >> oldDcokerfile   
             rm Dockerfile
             envsubst '${NASA_API_KEY}' < oldDockerfile >> Dockerfile
