--- a/eks/deployment.yaml
+++ b/eks/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: capstone-project
-          image: kusumass/capstone-project:v1
+          image: kusumass/capstone-project:${imageTag}
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
