--- a/eks/deployment.yaml
+++ b/eks/deployment.yaml
@@ -5,6 +5,11 @@ metadata:
   namespace: default
 spec:
   replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
   selector:
     matchLabels:
       app: capstone-project
@@ -27,8 +32,5 @@ spec:
               memory: 256Mi
               cpu: "0.2"
 
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 50%
+  
 
