--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,7 +186,7 @@ jobs:
           name: deploy on kubernetes
           command: |
             export imageTag=${CIRCLE_WORKFLOW_ID:0:4}
-            envsubst '${imageTag}' < eks/deployment.yaml | kubectl apply -f deployment.yaml 
+            envsubst '${imageTag}' < eks/deployment.yaml | kubectl apply -f eks/deployment.yaml 
           #  kubectl get deployments
           #  for (( i=30; i>0; i--)); do
           #    sleep 1 &
